tests/transpiler/x/clj/tail_recursion.error
run error: exit status 1
Execution error (StackOverflowError) at main/-main$sum-rec (tail_recursion.clj:7).
null

Full report at:
/tmp/clojure-2724379156572227413.edn
