tests/transpiler/x/clj/tail_recursion.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:42:00 GMT+7
(ns main)

(defn -main []
  (defn sum_rec [n acc]
    (if (= n 0) acc nil)
    (sum_rec (- n 1) (+ acc n)))
  (println (sum_rec 10 0)))

(-main)
